[package]
name = "repair-wp-posts-encoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
anyhow = "1"
dotenvy = "*"
futures = "0.3"
chardetng = "0.1"
encoding_rs = { version = "0.8", features = ["alloc"] }
